# langchain-fused-models

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  python-package.yml  python-publish.yml  test.yml
.kiro/specs/langchain-fused-model/: design.md  requirements.md  tasks.md
examples/: basic_usage.ipynb  routing_strategies.ipynb  structured_output.ipynb
src/langchain_fused_model/: __init__.py  exceptions.py  manager.py  rate_limiter.py  strategy.py  structured_output.py  usage_tracker.py
tests/: __init__.py  conftest.py  test_runnable_interface.py  test_system.py  test_unit.py
